infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: us.gcr.io/ticketing-dev-395215/auth  # name of image in google cloud, always starts the same way
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:   # default type is ClusterIP
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4001  # port I want the k8s service to expose, so if I call localhost:4001 then it will redirect to the pod's port 5000
      targetPort: 5000
