infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev # pretend domain name we will connect to only from our local machine, will edit our hosts file
      http:
        paths:
          - path: /api/users/?(.*)  # send requests made to this path to the backend below
            pathType: Prefix
            backend:
              service:
                name: auth-srv  # same name as auth-depl.yaml
                port:
                  number: 4001  # same port as auth-depl.yaml
